--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <select id="opening-dropdown"></select>
                 <button id="go-button">Go!</button>
             </p>
+            <div id="message-area"></div>
             <div id="game-area"></div>
         </div>
         <script type="text/javascript" src="constants.js"></script>
